[package]
name = "cosmwasm-rbac"
version = "0.1.2"
description = "Access Control Utilities for CosmWasm smart contracts"
authors = ["Hyojun Kim <retail3210@gmail.com>"]
keywords = ["cosmwasm", "terra", "smart-contracts"]
edition = "2021"
readme = "README.md"
documentation = "https://github.com/therne/cosmwasm-rbac/"
repository = "https://github.com/therne/cosmwasm-rbac/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "0.16.2", features = ["iterator"] }
cw-storage-plus = "0.9.1"
schemars = "0.8.1"
thiserror = "1.0.30"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
