[package]
name = "cosmwasm-rbac"
version = "0.1.5"
description = "Access Control Utilities for CosmWasm smart contracts"
authors = ["Hyojun Kim <retail3210@gmail.com>","giuseppe@informal.systems"]
keywords = ["cosmwasm", "terra", "smart-contracts"]
edition = "2022"
readme = "README.md"
documentation = "https://github.com/therne/cosmwasm-rbac/"
repository = "https://github.com/dusterbloom/cosmwasm-rbac/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.1.5", features = ["iterator"] }
cosmwasm-schema = { version = "1.1.0" }
cw-storage-plus = "0.16.0"
schemars = "0.8.11"
thiserror = "1.0.9"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
